--- a/pages/resume.html
+++ b/pages/resume.html
@@ -81,7 +81,7 @@
                     <h6><a href="https://executive-ed.xpro.mit.edu/professional-certificate-coding" target="_blank">Full
                             Stack MERN Web Development</a></h6>
                     <div class="dateSection">
-                        <p>Jul 2022 <span style="color:gray"><br>(in progress)</span></p>
+                        <p>Jul 2022</p>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center my-2">
