--- a/pages/blog.html
+++ b/pages/blog.html
@@ -82,7 +82,7 @@
 
         <div class="accordion myBlog mx-auto">
 
-            <!-- <div class="accordion-item">
+            <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button id='blog9Button' onclick="blog9Open()" class="accordion-button collapsed bg-transparent"
                         type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseEight"
@@ -98,8 +98,7 @@
                 <div id="blog9" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingEight">
                     <div class="text-center my-5"><span class="spinner-border" role="status"></span><p>Loading...</p></div>
                 </div>
-            </div>  -->
-            <!-- accodion-item closing div -->
+            </div> <!-- accodion-item closing div -->
 
             <div class="accordion-item">
                 <h2 class="accordion-header">
@@ -308,7 +307,7 @@
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
     <script src='../js/blog.js'></script>
-    <!-- <script src='../js/blogs/blog9.js'></script> -->
+    <script src='../js/blogs/blog9.js'></script>
     <script src='../js/blogs/blog8.js'></script>
     <script src='../js/blogs/blog7.js'></script>
     <script src='../js/blogs/blog6.js'></script>
