--- a/pages/resume.html
+++ b/pages/resume.html
@@ -160,12 +160,39 @@
             <h1 class="text-center mb-4">Experience</h1>
             <div class="row">
                 <div class="col-sm-8">
+                    <h3>Company <img class='float-end img-fluid' src="../pics/about/forbesLogo.png" alt="Forbes Media logo" style="border-radius:6px;"></h3>
+                    <h5>Forbes Media <a href="https://www.forbes.com/" target="_blank">Website</a></h5>
+                </div>
+                <div class="col-sm-4">
+                    <h3>Timeframe</h3>
+                    <h5>Jun 2022 to Present</h5>
+                </div>
+            </div>
+            <div class="row">
+                <span class="h3 col-sm-3">Position</span><span class='h5 col-sm-9 px-3' style='color:white;'>Frontend Web
+                    Developer</span>
+            </div>
+            <div>
+                <span class="h3">Description</span>
+            </div>
+            <p>Forbes Media is a global media, branding and technology company, with a focus on news and information about business, investing, technology, entrepreneurship, leadership and affluent lifestyles.  The Forbes brand today reaches more than 94 million people worldwide with its business message each month through its magazines and 37 licensed local editions around the globe, Forbes.com, TV, conferences, research, social and mobile platforms.</p>
+            <p>My roles and responsibilities include:</p>
+            <ul>
+                <li>Frontend web development as part of the Technology Engineering Internship Program.</li>
+                <li>Work with mentors and project leads to plan and exeute on future-looking projects.</li>
+                <li>Collaborate with cross-functional teams and deliver well documented work.</li>
+            </ul>
+        </div>
+
+        <div class="container-fluid myArticles">
+            <div class="row">
+                <div class="col-sm-8">
                     <h3>Company <img class='float-end' src="../pics/about/lenovainc_logo.gif" alt="LeNova Logo"></h3>
                     <h5>LeNova, Inc. <a href="https://www.lenovainc.com/" target="_blank">Website</a></h5>
                 </div>
                 <div class="col-sm-4">
                     <h3>Timeframe</h3>
-                    <h5>Jan 2022 to Present</h5>
+                    <h5>Jan 2022 to May 2022</h5>
                 </div>
             </div>
             <div class="row">
