--- a/pages/resume.html
+++ b/pages/resume.html
@@ -208,7 +208,7 @@
                 space. I
                 joined LeNova in 2022 to support business expansion initiatives, lead website development efforts, and
                 build upon core competencies.</p>
-            <p>My roles and responsibilities include:</p>
+            <p>My roles and responsibilities included:</p>
             <ul>
                 <li>Responsive web development using HTML, CSS, and JavaScript.</li>
                 <li>Research business goals, customers and their expected behavior.</li>
