--- a/pages/resume.html
+++ b/pages/resume.html
@@ -160,8 +160,8 @@
             <h1 class="text-center mb-4">Experience</h1>
             <div class="row">
                 <div class="col-sm-8">
-                    <h3>Company <img class='float-end img-fluid' src="../pics/about/forbesLogo.png" alt="Forbes Media logo" style="border-radius:6px;"></h3>
-                    <h5>Forbes Media <a href="https://www.forbes.com/" target="_blank">Website</a></h5>
+                    <h3>Company <a href="https://www.forbes.com/" target="_blank"><img class='float-end' src="../pics/about/forbesLogo.png" alt="Forbes Media logo" style="border-radius:6px;"></a></h3>
+                    <h5>Forbes Media</h5>
                 </div>
                 <div class="col-sm-4">
                     <h3>Timeframe</h3>
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="row">
-                <span class="h3 col-sm-3">Position</span><span class='h5 col-sm-9 px-3' style='color:white;'>Frontend Web
+                <span class="h3 col-sm-3 col-md-2">Position</span><span class='h5 col-sm-9 col-md-10 px-3' style='color:white;'>Frontend Web
                     Developer</span>
             </div>
             <div>
@@ -187,8 +187,8 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-sm-8">
-                    <h3>Company <img class='float-end' src="../pics/about/lenovainc_logo.gif" alt="LeNova Logo"></h3>
-                    <h5>LeNova, Inc. <a href="https://www.lenovainc.com/" target="_blank">Website</a></h5>
+                    <h3>Company <a href="https://www.lenovainc.com/" target="_blank"><img class='float-end' src="../pics/about/lenovainc_logo.gif" alt="LeNova Logo"></a></h3>
+                    <h5>LeNova, Inc.</h5>
                 </div>
                 <div class="col-sm-4">
                     <h3>Timeframe</h3>
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="row">
-                <span class="h3 col-sm-3">Position</span><span class='h5 col-sm-9 px-3' style='color:white;'>Web
+                <span class="h3 col-sm-3 col-md-2">Position</span><span class='h5 col-sm-9 col-md-10 px-3' style='color:white;'>Web
                     Developer<span style="color:gray;"> (Contract)</span></span>
             </div>
             <div>
@@ -234,8 +234,8 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-sm-8">
-                    <h3>Company <img class='float-end' src="../pics/about/eisai_logo.png" alt="Eisai Logo"></h3>
-                    <h5>Eisai, Inc. <a href="https://us.eisai.com/" target="_blank">Website</a></h5>
+                    <h3>Company <a href="https://us.eisai.com/" target="_blank"><img class='float-end' src="../pics/about/eisai_logo.png" alt="Eisai Logo"></a></h3>
+                    <h5>Eisai, Inc. </h5>
                 </div>
                 <div class="col-sm-4">
                     <h3>Timeframe</h3>
@@ -243,7 +243,7 @@
                 </div>
             </div>
             <div class="row">
-                <span class="h3 col-sm-3">Position</span><span class='h5 px-3 col-sm-9' style='color:white;'>Senior
+                <span class="h3 col-sm-3 col-lg-2">Position</span><span class='h5 px-3 col-lg-10 col-sm-9' style='color:white;'>Senior
                     Quality
                     Engineer</span>
             </div>
@@ -288,10 +288,9 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-sm-8">
-                    <h3>Company <img class='float-end' src="../pics/about/janssen_logo.jpg" alt="Eisai Logo"
-                            style="border-radius:100%;">
-                    </h3>
-                    <h5> Janssen Pharmaceuticals <a href="https://www.janssen.com/" target="_blank">Website</a></h5>
+                    <h3>Company <a href="https://www.janssen.com/" target="_blank"><img class='float-end' src="../pics/about/janssen_logo.jpg" alt="Eisai Logo"
+                        style="border-radius:100%;"></a></h3>
+                    <h5> Janssen Pharmaceuticals</h5>
                 </div>
                 <div class="col-sm-4">
                     <h3>Timeframe</h3>
@@ -299,7 +298,7 @@
                 </div>
             </div>
             <div class="row">
-                <span class="h3 col-sm-3">Position</span><span class='h5 col-sm-9 px-3' style='color:white;'>Senior
+                <span class="h3 col-sm-3 col-md-2">Position</span><span class='h5 col-sm-9 col-md-10 px-3' style='color:white;'>Senior
                     Validation
                     Engineer</span>
             </div>
@@ -344,8 +343,8 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-sm-8">
-                    <h3>Company <img class='float-end' src="../pics/about/ipsdb_logo.gif" alt="IPS Logo"></h3>
-                    <h5>Integrated Project Services <a href="https://www.ipsdb.com/" target="_blank">Website</a></h5>
+                    <h3>Company <a href="https://www.ipsdb.com/" target="_blank"><img class='float-end' src="../pics/about/ipsdb_logo.gif" alt="IPS Logo"></a></h3>
+                    <h5>Integrated Project Services</h5>
                 </div>
                 <div class="col-sm-4">
                     <h3>Timeframe</h3>
@@ -353,7 +352,7 @@
                 </div>
             </div>
             <div class="row">
-                <span class="h3 col-sm-3">Position</span><span class='h5 col-sm-9 px-3' style='color:white;'>Validation
+                <span class="h3 col-sm-3 col-md-2">Position</span><span class='h5 col-sm-9 col-md-10 px-3' style='color:white;'>Validation
                     Specialist</span>
             </div>
             <div>
