--- a/pages/contact.html
+++ b/pages/contact.html
@@ -132,7 +132,7 @@
                     <div class='form-item row'>
                         <label class='col-sm-2' for="">Message:</label>
                         <textarea class='col-sm-10' name="message" cols="30" rows="5"
-                            placeholder="Let me know you visited! Need help with a project?" required></textarea>
+                            placeholder="Let me know you visited!" required></textarea>
                     </div>
                     <input type="hidden" name="_subject" value="New codeByPete Inquiry!">
                     <input type="hidden" name="_template" value="basic">
