--- a/pages/resume.html
+++ b/pages/resume.html
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="row">
-                <span class="h3 col-sm-3 col-md-2">Position</span><span class='h5 col-sm-9 col-md-10 px-3' style='color:white;'>Frontend Web
+                <span class="h3 col-sm-3 col-lg-2">Position</span><span class='h5 col-sm-9 col-lg-10 px-3' style='color:white;'>Frontend Web
                     Developer</span>
             </div>
             <div>
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="row">
-                <span class="h3 col-sm-3 col-md-2">Position</span><span class='h5 col-sm-9 col-md-10 px-3' style='color:white;'>Web
+                <span class="h3 col-sm-3 col-lg-2">Position</span><span class='h5 col-sm-9 col-lg-10 px-3' style='color:white;'>Web
                     Developer<span style="color:gray;"> (Contract)</span></span>
             </div>
             <div>
@@ -298,7 +298,7 @@
                 </div>
             </div>
             <div class="row">
-                <span class="h3 col-sm-3 col-md-2">Position</span><span class='h5 col-sm-9 col-md-10 px-3' style='color:white;'>Senior
+                <span class="h3 col-sm-3 col-lg-2">Position</span><span class='h5 col-sm-9 col-lg-10 px-3' style='color:white;'>Senior
                     Validation
                     Engineer</span>
             </div>
@@ -352,7 +352,7 @@
                 </div>
             </div>
             <div class="row">
-                <span class="h3 col-sm-3 col-md-2">Position</span><span class='h5 col-sm-9 col-md-10 px-3' style='color:white;'>Validation
+                <span class="h3 col-sm-3 col-lg-2">Position</span><span class='h5 col-sm-9 col-lg-10 px-3' style='color:white;'>Validation
                     Specialist</span>
             </div>
             <div>
