res clnup cont btmnav

--- a/pages/about.html
+++ b/pages/about.html
@@ -135,7 +135,7 @@
 
         <div id='bottomNav' class="container-fluid">
             <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width: 640px;"><span
-                    class="text-white">Need help with a project?</span> Read blog articles about my Coding Bootcamp
+                    class="text-white">Let me know you visited!</span> Read blog articles about my Coding Bootcamp
                 experience.</h5>
             <div class="btnContainer container-fluid text-center mt-4 d-flex justify-content-evenly">
                 <a id='buttonContact' href="../pages/contact.html" class="btn btn-secondary btnDark">Contact Me</a>
