--- a/pages/resume.html
+++ b/pages/resume.html
@@ -202,12 +202,7 @@
             <div>
                 <span class="h3">Description</span>
             </div>
-            <p>LeNova, Inc. has over 30 years of experience as an engineering and technology solutions provider. They
-                focus
-                on the Life Sciences and Commercial industries, but have a specialization in the Biopharmaceutical
-                space. I
-                joined LeNova in 2022 to support business expansion initiatives, lead website development efforts, and
-                build upon core competencies.</p>
+            <p>LeNova, Inc. has over 30 years of experience as an engineering and technology solutions provider. They focus on the Life Sciences and Commercial industries, but have a specialization in the Biopharmaceutical space. I joined LeNova in 2022 to support business expansion initiatives, lead website development efforts, and build upon core competencies.</p>
             <p>My roles and responsibilities included:</p>
             <ul>
                 <li>Responsive web development using HTML, CSS, and JavaScript.</li>
@@ -250,37 +245,19 @@
             <div>
                 <span class="h3">Description</span>
             </div>
-            <p>Eisai is a research based human health care company that discovers, develops, and markets products
-                throughout
-                the
-                world. I started at Eisai when it was still known as Morphotek and I was initially hired as a Contract
-                Senior
-                Validation Specialist, but transitioned to a full time employee with their Quality Assurance
-                organization in
-                2012.
+            <p>Eisai is a research based human health care company that discovers, develops, and markets products throughout the world. I started at Eisai when it was still known as Morphotek and I was initially hired as a Contract Senior Validation Specialist, but transitioned to a full time employee with their Quality Assurance organization in 2012.
             </p>
             <p>My roles and responsibilities included:</p>
             <ul>
-                <li>Quality Lead for: Document Control, Validation, Facilities, Automation, Deviation Management, and
-                    Change
-                    Control.</li>
+                <li>Quality Lead for: Document Control, Validation, Facilities, Automation, Deviation Management, and Change Control.</li>
                 <li>Manage, mentor, and develop junior validation / quality staff.</li>
                 <li>Provide guidance on calibration, preventive maintenance, and process tolerance programs.</li>
-                <li>Develop procedures to support Commercialization and Pilot Plant Commissioning / Qualification /
-                    Validation
-                    (CQV) program.</li>
-                <li>Meeting Leadership Skills: collaborating with stakeholders, requesting and proposing changes,
-                    assessing
-                    impact
-                    and establishing justification, establishing an implementation plan, execution and closure of
-                    implementation
-                    activities, and providing high-level summaries and metrics.</li>
+                <li>Develop procedures to support Commercialization and Pilot Plant Commissioning / Qualification / Validation (CQV) program.</li>
+                <li>Meeting Leadership Skills: collaborating with stakeholders, requesting and proposing changes, assessing impact and establishing justification, establishing an implementation plan, execution and closure of implementation activities, and providing high-level summaries and metrics.</li>
                 <li>Led Change Management Review Board.</li>
                 <li>Led Deviation Management Program.</li>
                 <li>Led and managed Commissioning Qualification Validation contract/consulting firms.</li>
-                <li>Successfully support manufacturing facility and associated QMS documentation during Regulatory
-                    Inspections and
-                    Internal Audits.</li>
+                <li>Successfully support manufacturing facility and associated QMS documentation during Regulatory Inspections and Internal Audits.</li>
                 <li>Responsible for site Continuous Improvement efforts.</li>
             </ul>
         </div>
@@ -305,38 +282,18 @@
             <div>
                 <span class="h3">Description</span><span class='h5 px-3' style='color:white;'></span>
             </div>
-            <p>Janssen Pharmaceuticals is a wholly-owned subsidiary of Johnson & Johnson, and acquired Centocor
-                Biopharmaceutical in 1999. Centocor was a world leader in monoclonal antibody production and cell
-                therapy
-                technology. I joined Centocor R&D / J&J in 2006 as a Validation Engineer II.</p>
+            <p>Janssen Pharmaceuticals is a wholly-owned subsidiary of Johnson & Johnson, and acquired Centocor Biopharmaceutical in 1999. Centocor was a world leader in monoclonal antibody production and cell therapy technology. I joined Centocor R&D / J&J in 2006 as a Validation Engineer II.</p>
             <p>My roles and responsibilities included:</p>
             <ul>
                 <li>Managing a multi-site laboratory equipment qualification program.</li>
-                <li>Managing a plant floor automation program that supports two pilot plant facilities and one QC
-                    laboratory.</li>
-                <li>Responsible for day-to-day activities of Validation and Automation Consultants, includes: project
-                    scope,
-                    budget, schedule, and cross-functional communications.</li>
-                <li>Conducting and overseeing investigations from qualification discrepancies and atypical events;
-                    includes
-                    root
-                    cause analysis, proposing and implementing corrective actions, and effectiveness checks</li>
-                <li>Providing technical support for production deviations and audit observations, includes initiating
-                    atypical
-                    events, conducting event investigations, and implementing corrective actions</li>
-                <li>Supporting lean manufacturing efficiency initiatives and conducting Failure Mode and Effects
-                    Analysis
-                    (FMEA)
+                <li>Managing a plant floor automation program that supports two pilot plant facilities and one QC laboratory.</li>
+                <li>Responsible for day-to-day activities of Validation and Automation Consultants, includes: project scope, budget, schedule, and cross-functional communications.</li>
+                <li>Conducting and overseeing investigations from qualification discrepancies and atypical events; includes root cause analysis, proposing and implementing corrective actions, and effectiveness checks</li>
+                <li>Providing technical support for production deviations and audit observations, includes initiating atypical events, conducting event investigations, and implementing corrective actions</li>
+                <li>Supporting lean manufacturing efficiency initiatives and conducting Failure Mode and Effects Analysis (FMEA)
                 </li>
-                <li>Performing, executing, and overseeing qualification studies for sterilization, cleaning, process
-                    equipment,
-                    and systems</li>
-                <li>Authoring, reviewing, revising and approving a variety of cGMP documentation; including but not
-                    limited
-                    to the
-                    following: SOPs, site qualification master plans, design documents, atypical events, event
-                    investigations,
-                    corrective action plans, and change control</li>
+                <li>Performing, executing, and overseeing qualification studies for sterilization, cleaning, process equipment, and systems</li>
+                <li>Authoring, reviewing, revising and approving a variety of cGMP documentation; including but not limited to the following: SOPs, site qualification master plans, design documents, atypical events, event investigations, corrective action plans, and change control</li>
             </ul>
         </div>
 
@@ -358,25 +315,15 @@
             <div>
                 <span class="h3">Description</span>
             </div>
-            <p>Integrated Project Services is a fully integrated, design-build engineering firm specializing in the life
-                sciences and semiconductor industries. I joined IPS as a Validation Specialist in 2002 after graduated
-                from
-                the
-                University of Delaware with a Bachelor's Degree in Biological Sciences.</p>
+            <p>Integrated Project Services is a fully integrated, design-build engineering firm specializing in the life sciences and semiconductor industries. I joined IPS as a Validation Specialist in 2002 after graduated from the University of Delaware with a Bachelor's Degree in Biological Sciences.</p>
             <p>My roles and responsibilities included:</p>
             <ul>
-                <li>Detailed preparation, execution, and review of validation protocols, test scripts, and reports,
-                    commissioning
-                    documentation, engineering turnover packages, and standard operating procedures.</li>
-                <li>Proficient in operation of Emerson DeltaV software, experienced in reading and interpreting run
-                    logic
+                <li>Detailed preparation, execution, and review of validation protocols, test scripts, and reports, commissioning documentation, engineering turnover packages, and standard operating procedures.</li>
+                <li>Proficient in operation of Emerson DeltaV software, experienced in reading and interpreting run logic
                 </li>
                 <li>Performance Qualifications for Steam-In-Place procedures</li>
-                <li>Computer system validation support during all phases of product development life cycle and
-                    implementation</li>
-                <li>Calibration, qualification, and utilization of a variety of validation equipment, including the Kaye
-                    Validator
-                    2000</li>
+                <li>Computer system validation support during all phases of product development life cycle and implementation</li>
+                <li>Calibration, qualification, and utilization of a variety of validation equipment, including the Kaye Validator 2000</li>
                 <li>Correspondence with engineering, maintenance, validation, vendors, owners, and quality assurance.
                 </li>
             </ul>
@@ -384,7 +331,7 @@
 
         <div id='bottomNav' class="container-fluid mt-5">
             <h5 class="menloRegular text-silver textShadowBlack text-center mx-auto" style="max-width:860px;">Demo
-                projects and see my progression. <span class="text-white">Need help with a project?</span></h5>
+                projects and see my progression. <span class="text-white">Let me know you visited!</span></h5>
             <div class="container-fluid text-center mt-4 d-flex justify-content-evenly" style="max-width:480px;">
                 <a id='buttonProjects' href="../pages/projects.html" class="btn btn-secondary btnDark">Projects</a>
                 <a id='buttonContact' href="../pages/contact.html" class="btn btn-secondary ">Contact Me</a>
