--- a/pages/about.html
+++ b/pages/about.html
@@ -90,10 +90,10 @@
             </div>
         </div>
 
-        <div id='githubContributions' class="container-fluid text-center">
-            <a href="https://skyline.github.com/codeTrackLift/2022" target="_blank">
-                <img src="../pics/about/githubContributions_100Days.jpg" alt="GitHub contribution">
-            </a>
+        <div id='githubContributionsWrapper' class="container-fluid text-center">
+            <button style="border:none;background-color:transparent;" onclick="viewContributions()">
+                <img id='githubContributions' src="../pics/about/githubContributions_100Days.jpg" alt="GitHub contribution">
+            </button>
         </div>
 
         <div id="personal" class="myArticles container-fluid">
