--- a/pages/resume.html
+++ b/pages/resume.html
@@ -179,7 +179,7 @@
             <p>My roles and responsibilities include:</p>
             <ul>
                 <li>Frontend web development as part of the Technology Engineering Internship Program.</li>
-                <li>Develop React components to support a code base migration using Next, Storybook, TypeScript, and SCSS.</li>
+                <li>Develop React components to support a code base migration using Next, Storybook, TypeScript, and Sass.</li>
                 <li>Collaborate with cross-functional teams and deliver well documented work.</li>
             </ul>
         </div>
