blog10 h5 margin left

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -89,7 +89,7 @@
                         aria-expanded="true" aria-controls="panelsStayOpen-collapseEight">
                         <h6 class="my-auto">blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">10</span><span
                                 style='color:dodgerblue'>]</span></h6>
-                        <h5 class="w-100 my-auto">Capstone Videos</h5>
+                        <h5 class="w-100 my-auto" style="margin-left:-0.5rem;">Capstone Videos</h5>
                         <div class="d-none d-sm-none d-md-block w-50 text-end">
                             <p class="text-gray my-auto">Jun 20, 2022</p>
                         </div>
