--- a/pages/projects.html
+++ b/pages/projects.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/typewriter_sIL.css">
     <link rel="stylesheet" href="../css/cards.css">
+    <link rel="stylesheet" href="../css/sortBox.css">
     <link rel="stylesheet" href="../css/projects.css">
     <link rel="shortcut icon" type='image/x-icon' href="../favicon.ico">
 
