--- a/pages/blog.html
+++ b/pages/blog.html
@@ -130,6 +130,7 @@
 
     <!-- My JS -->
     <script src="../js/navbar.js"></script>
+    <script src='../js/blogList.js'></script>
     <script src='../js/blog.js'></script>
     <script src="../js/socials.js"></script>
     <script src="../js/footer.js"></script>
