--- a/pages/about.html
+++ b/pages/about.html
@@ -92,7 +92,7 @@
         </div>
 
         <div id='githubContributionsWrapper' class="container-fluid text-center">
-            <button style="border:none;background-color:transparent;" onclick="viewContributions()">
+            <button onclick="viewContributions()">
                 <img id='githubContributions' src="../pics/about/githubContributions_100Days.jpg" alt="GitHub contribution">
             </button>
         </div>
