blog 12 in prog

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -142,6 +142,7 @@
         injectSocials();
         injectMyFooter();
     </script>
+    <script src='../js/blogs/blog12.js'></script>
     <script src='../js/blogs/blog11.js'></script>
     <script src='../js/blogs/blog10.js'></script>
     <script src='../js/blogs/blog9.js'></script>
