--- a/pages/blog.html
+++ b/pages/blog.html
@@ -70,10 +70,10 @@
         <div class="container-fluid myArticles">
             <div class="row">
                 <div class="col-3 m-auto">
-                    <a href="https://xpro.mit.edu/" target="_blank"><img id='mitLogo' src="../pics/about/mitxPro_logoStacked.jpg" class="img-fluid" alt="MIT xPRO Logo."></a>
+                    <a href="https://xpro.mit.edu/" target="_blank"><img id='mitLogo' src="../pics/about/mitxPro_logoStacked.jpg" class="img-fluid" alt="MIT xPRO Logo." style="width:8rem;"></a>
                 </div>
                 <div class="col-9 m-auto">
-                    <h3 class="text-center textShadowBlack" style="color:gray;">These are reflections of my experience during the MIT xPRO Coding Bootcamp.</h3>
+                    <h3 class="fs-6 text-center textShadowBlack menloRegular" style="color:gray;">/* these are reflections of my journey to become, a software developer */</h3>
                 </div>
             </div>
         </div>
