--- a/pages/blog.html
+++ b/pages/blog.html
@@ -73,7 +73,7 @@
                     <a href="https://xpro.mit.edu/" target="_blank"><img id='mitLogo' src="../pics/about/mitxPro_logoStacked.jpg" class="img-fluid" alt="MIT xPRO Logo." style="width:8rem;"></a>
                 </div>
                 <div class="col-9 m-auto">
-                    <h3 class="fs-6 text-center textShadowBlack menloRegular" style="color:gray;">/* these are reflections of my journey to become, a software developer */</h3>
+                    <h3 class="fs-6 text-center textShadowBlack menloRegular" style="color:gray;">/* these are reflections from my coding journey */</h3>
                 </div>
             </div>
         </div>
