--- a/pages/resume.html
+++ b/pages/resume.html
@@ -179,8 +179,10 @@
             <p>My roles and responsibilities include:</p>
             <ul>
                 <li>Frontend web development as part of the Technology Engineering Internship Program.</li>
-                <li>Develop Unit Tests using Jest.</li>
+                <li>Develop unit-tests, and ensuring appropriate code coverage across all branches.</li>
                 <li>Develop React components to support a code base migration using Next.js, TypeScript, and Sass.</li>
+                <li>Debug and resolve code quality issues across multiple different repositories.</li>
+                <li>Design and create unique contributions to the Forbes Media User Interface Showcase</li>
                 <li>Collaborate with cross-functional teams with Jira and Confluence to deliver well documented work.</li>
             </ul>
         </div>
@@ -215,7 +217,7 @@
                 <li>Implementing Web Content Accessibility Guidelines 2.1.</li>
                 <li>Continuous Integration / Continuous Deployment (CI/CD).</li>
                 <li>Search Engine Optimization (SEO), Google Lighthouse and Analytics.</li>
-                <li>Test Driven Development (TDD), as applicable.</li>
+                <li>LeNova, Inc is successfully ranked on Google for its keywords.</li>
             </ul>
         </div>
 
@@ -240,8 +242,7 @@
             </div>
             <div class="row">
                 <span class="h3 col-sm-3 col-lg-2">Position</span><span class='h5 px-3 col-lg-10 col-sm-9' style='color:white;'>Senior
-                    Quality
-                    Engineer</span>
+                    Quality Engineer</span>
             </div>
             <div>
                 <span class="h3">Description</span>
