--- a/pages/resume.html
+++ b/pages/resume.html
@@ -179,10 +179,10 @@
             <p>My roles and responsibilities include:</p>
             <ul>
                 <li>Frontend web development as part of the Technology Engineering Internship Program.</li>
-                <li>Develop unit-tests, and ensuring appropriate code coverage across all branches.</li>
                 <li>Develop React components to support a code base migration using Next.js, TypeScript, and Sass.</li>
-                <li>Debug and resolve code quality issues across multiple different repositories.</li>
+                <li>Develop unit-tests, and ensuring appropriate code coverage across all branches.</li>
                 <li>Design and create unique contributions to the Forbes Media User Interface Showcase</li>
+                <li>Debug and resolve code quality tickets across multiple repositories.</li>
                 <li>Collaborate with cross-functional teams with Jira and Confluence to deliver well documented work.</li>
             </ul>
         </div>
