--- a/pages/projects.html
+++ b/pages/projects.html
@@ -63,9 +63,9 @@
             </figure>
         </section>
 
-        <div class="container-fluid myArticles text-center mb-4">
+        <!-- <div class="container-fluid myArticles text-center mb-4">
             <h6 class="menloRegular text-gray mb-5">/* myCodingJourney started in Dec 2021 */</h6>
-        </div>
+        </div> -->
 
         <div class="container-fluid myArticles text-center" id="sortBox">
             <h6 class="text-silver">Sort Projects By</h6>
